Fixed: * Layout problem in Active Layers panel where components were being pushed off the right of the panel (AUS-3953). * Layout problem in Featured Layers where long named layers could put the delete button in a position where it couldn't be pushed (AUS-3935). * Opacity slider not updating as it was moved, only when it finished dragging. Also some style changes to slider.

--- a/src/app/menupanel/activelayers/activelayerspanel.component.scss
+++ b/src/app/menupanel/activelayers/activelayerspanel.component.scss
@@ -7,6 +7,8 @@
   font-size: .85rem;
   color: #d8d9d7;
   margin: 0 5px 0 0;
+  padding: 0.5em 0;
+  border-bottom: 1px solid rgba(255 ,255, 255, 0.15);
 
   // Disbale text selection
   -webkit-user-select: none;  /* Safari */
@@ -24,8 +26,15 @@
   .activeLayerContent {
     width:100%;
   }
-}
 
+  // Slider min-width is 112px by default which can push components to right off the panel 
+  ::ng-deep {
+    mat-slider {
+      min-width: 80px;
+    }
+  }
+
+}
 
 .cdk-drag-preview {
   background-color: #6764ce;
